experimental/parser/testdata/lexer/strings/unclosed2.proto.stderr.txt
error: unterminated string literal
  --> testdata/lexer/strings/unclosed2.proto:1:1
   |
 1 | '\'
   | ^^^ expected to be terminated by `'`
   = note: this string appears to end in an escaped quote; replace `\'` with
           `\\''`

encountered 1 error
